Fixed layout issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,6 +47,23 @@
   --color-sidebar-ring: var(--sidebar-ring);
 }
 
+@theme {
+  --animate-bounce-right: bounce-right 1s infinite;
+
+  @keyframes bounce-right {
+    0%,
+    100% {
+      transform: translateX(25%);
+      animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    }
+
+    50% {
+      transform: none;
+      animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    }
+  }
+}
+
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
@@ -122,6 +139,12 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .animate-bounce-right {
+    animation: var(--animate-bounce-right);
   }
 }
 
